# ES-drawing-robot-ros

bram_read_write/: CMakeLists.txt  package.xml
bram_read_write/src/: bram_read_write_node.cpp
image_processor/: package.xml  setup.py
image_processor/image_processor/: image_processor_node.py
motion_control/: package.xml  setup.py
motion_control/install/: local_setup.sh  setup.sh
motion_control/motion_control/: motion_controller.py
